Sat Jan  5 14:12:33 GMT 2008  Ivan Shmakov  <oneingray@gmail.com>

	* configure.ac: Test for existence of
	  "$srcdir/gnulib/po/Makefile.in.in" rather than just
	  gnulib/po/Makefile.in.in in order to work for VPATH builds. Also
	  reported by Peter Breitenlohner.

Fri Jan  4 16:03:57 GMT 2008  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/man.c (display): Stop -W printing blank lines for manual pages
	  without corresponding cat pages.

Fri Jan  4 15:59:41 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/Makefile.am: Install globbing and manconv in
	  $(libexecdir)/@PACKAGE@ rather than in $(pkglibdir). Reported by
	  Peter Breitenlohner.

Fri Jan  4 12:44:34 GMT 2008  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* libdb/db_btree.c (dbstore): Rename basename argument to base to
	  avoid clashing with the function of the same name.
	* libdb/db_storage.h (dbstore): Update prototype.
	* libdb/mydbm.h (dbver_wr, dbver_rd), src/security.h
	  (do_system_drop_privs): Update prototype argument names to match
	  definition.

Fri Jan  4 11:52:22 GMT 2008  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/man.c: Make prompt_string const. Avoids "discards qualifier"
	  warning when building without NLS.

Thu Jan  3 21:39:27 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* gnulib: Import the lib-ignore module, to have the linker ignore
	  unused libraries.

Wed Jan  2 23:30:33 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* lib/decompress.c (decompress_zlib), lib/linelength.c
	  (get_line_length), lib/pipeline.c (passthrough), src/lexgrog.l
	  (find_name), src/man.c (set_term, get_term, main,
	  make_roff_command, format_display_and_save, format_display,
	  display_catman, display), src/manconv.c (main), src/zsoelim.l
	  (open_file): Use STDIN_FILENO, STDOUT_FILENO, and STDERR_FILENO
	  macros rather than calling fileno.

Wed Jan  2 16:46:46 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* src/accessdb.c (main), src/catman.c (main), src/globbing_test.c