@@ -1,3 +1,10 @@
+Sat Jan  5 21:49:40 GMT 2008  Colin Watson  <cjwatson@debian.org>
+
+	* m4/man-gcc-warning.m4: New file.
+	* configure.ac: Test whether each -W option (other than -Wall) that
+	  we want to add is supported, rather than adding it
+	  unconditionally. Reported by Peter Breitenlohner.
+
 Sat Jan  5 14:12:33 GMT 2008  Ivan Shmakov  <oneingray@gmail.com>
 
 	* configure.ac: Test for existence of
